--- a/client/package.json
+++ b/client/package.json
@@ -2,25 +2,22 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "yarn build && npx thirdweb@latest upload dist"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^3.11.1",
+    "@thirdweb-dev/sdk": "^3.10.5",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2"
+    "@vitejs/plugin-react": "^2",
+    "vite": "^3",
+    "vite-plugin-node-polyfills": "^0.7.0"
   }
 }
