--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,15 @@
     "@thirdweb-dev/sdk": "^3.10.5",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.11.2",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "vite": "^3",
     "vite-plugin-node-polyfills": "^0.7.0"
   }
